erDiagram
    direction TB

    %% Supplier Tables

    SUPPLIER {
        int SupplierID PK
        string SupplierName
        string SupplierCategory
    }

    SUPPLIER_DELIVERY {
        int InvoiceID PK
        int SupplierID FK
        date ExpectedDelivery
        date ActualDelivery
    }

    SUPPLY_ITEM {
        int SupplyItemID PK
        string ItemName
        string ItemCategory
    }

    SUPPLY_INVENTORY_TABLE {
        int SupplyInventoryID PK
        int SupplyItemID FK
        int Quantity
    }

    SUPPLIER_ITEM_DELIVERY {
        int OrderItemID PK
        int InvoiceID FK
        int SupplyItemID FK
        int Quantity
    }


    %% WINE TABLES

    WINE_INVENTORY {
        int WineInventoryID PK
        int WineID FK
        int QuantityOnHand
    }

    WINE {
        int WineID PK
        string WineName
        string WineType
        int YearProduced
    }


    %% DISTRIBUTOR TABLES

    DIST {
        int DistID PK
        string DistName
        string DistPhone
        string DistAddress
        string DistEmail
    }

    DIST_ORDER {
        int OrderID PK
        int DistID FK
        date OrderDate
    }

    ORDER_ITEM {
        int OrderItemID PK
        int OrderID FK
        int WineID FK
        int Quantity
    }

    SHIPPING_SERVICE {
        int ShipperID PK
        string ShipperName
        string ShipperPhone
        string ShipperWeb
    }

    SHIPMENT {
        int ShipmentID PK
        int OrderID FK
        date ShipmentDate
        string TrackingNumber
        int ShippingService FK
    }

    WINE_TO_DIST {
        int WD_ID PK
        int WineID FK
        int DistributorID FK
    }


    %% Employee Tables

    DEPARTMENT {
        int DeptID PK
        string DeptName
        int ManagerEmployeeID FK
    }

    EMPLOYEE {
        int EmployeeID PK
        string FirstName
        string LastName
        string Role
        int DeptID FK
    }

    TIME_PUNCH_TABLE {
        int PunchID PK
        int EmployeeID FK
        date DateWorked
        decimal HoursWorked
    }


    %% RELATIONSHIPS
    
    SUPPLIER ||--o{ SUPPLIER_DELIVERY : supplies
    SUPPLIER_DELIVERY ||--o{ SUPPLIER_ITEM_DELIVERY : contains_items
    SUPPLY_ITEM ||--o{ SUPPLIER_ITEM_DELIVERY : delivered
    SUPPLY_ITEM ||--o{ SUPPLY_INVENTORY_TABLE : stocked_as

    WINE ||--o{ WINE_INVENTORY : stocked_in
    WINE ||--o{ ORDER_ITEM : included_in

    DEPARTMENT ||--o{ EMPLOYEE : includes
    EMPLOYEE ||--o{ TIME_PUNCH_TABLE : logs
    DEPARTMENT ||--|| EMPLOYEE : managed_by

    DIST ||--o{ DIST_ORDER : places
    DIST_ORDER ||--o{ ORDER_ITEM : contains

    DIST_ORDER ||--o{ SHIPMENT : shipped_as
    SHIPPING_SERVICE ||--o{ SHIPMENT : ships

    WINE ||--o{ WINE_TO_DIST : connects
    DIST ||--o{ WINE_TO_DIST : connects